# amadeus_nao

./: .dockerignore  package-lock.json
.devcontainer/cpu/: devcontainer.json  docker-compose.yml
.devcontainer/gpu/: devcontainer.json  docker-compose.yml
amadeus_LoRA/: Modelfile  QLoRA.py  build_train_jsonl.py  check.py  first.train.jsonl  kurisu.json  main.py  paraphras.py  pyproject.toml  split.py  train.fixed.jsonl  train.jsonl  train.paraphrased.jsonl
back/: .env.example  .gitignore  dockerfile  ollama.py  pyproject.toml
back/src/: check_nao.py  main.py  nao_eye.py  ollama_helper.py  run.amadeus.py  socket_test.py
front/: dockerfile  index.html  package-lock.json  package.json
front/src/: App.css  App.tsx  DivergenceMeter.tsx  main.tsx
