[project]
name = "amadeus-lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "peft>=0.18.0",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]
