[project]
name = "amadeus-lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "xformers",
    "torch",
    "transformers",
    "datasets",
    "trl",
    "peft",
    "bitsandbytes",

]
